# roost

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TASKS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
bench/: throughput.py
docs/: changelog.md  conf.py  index.md  quickstart.md
docs/concepts/: cron.md  observability.md  operations.md  retries.md  transactional-enqueue.md  unique-jobs.md
docs/recipes/: django.md  fastapi.md  flask.md
docs/reference/: api.md
examples/: README.md  plain_python.py
examples/docker/: README.md  docker-compose.yml  seed.py  standalone.py  tasks.py
examples/etl_pipeline/: etl.py
examples/fanout_join/: fanout.py
examples/fastapi_app/: app.py
examples/scheduled_reports/: reports.py
grafana/: README.md  roost-overview.json
src/roost/: __init__.py  async_api.py  cli.py  decorators.py  exceptions.py  hooks.py  observability.py  sync_api.py  tasks.py  testing.py  worker.py
src/roost/_core/: __init__.py  cron.py  doctor.py  job.py  migrations.py  notify.py  repo.py  retry.py  schema.py  states.py  supervisor.py  wait.py
src/roost/contrib/: __init__.py  django.py  fastapi.py  flask.py
tests/: conftest.py  test_chaos.py  test_cli.py  test_coverage_lift.py  test_cron.py  test_enqueue.py  test_features.py  test_hardening.py  test_listen_notify.py  test_release_polish.py  test_retries.py  test_tier1.py  test_tier2_chaining.py  test_tier2_throttling.py  test_tier3.py  test_tier4.py  test_unique.py  test_worker.py
