[project]
name = "pgroost"
version = "0.1.0"
description = "Postgres-backed background job queue for Python — Oban for Pythonistas. Install: pip install pgroost; import: `import roost`."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ashhad Ahsan", email = "ashhadahsan@gmail.com" },
]
keywords = [
    "postgres",
    "queue",
    "jobs",
    "background",
    "worker",
    "cron",
    "oban",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "asyncpg>=0.31.0",
    "croniter>=6.2.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "structlog>=25.5.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
]
otel = [
    "opentelemetry-api>=1.27",
]
metrics = [
    "prometheus-client>=0.21",
]
reload = [
    "watchfiles>=0.24",
]

[project.urls]
Homepage = "https://github.com/ashhadahsan/roost"
Documentation = "https://pgroost.readthedocs.io"
Issues = "https://github.com/ashhadahsan/roost/issues"
Changelog = "https://github.com/ashhadahsan/roost/blob/main/CHANGELOG.md"

[project.scripts]
roost = "roost.cli:app"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

# PyPI distribution is "pgroost" but the import path stays `roost`.
# Tell uv_build to find the package at src/roost/ instead of src/pgroost/.
[tool.uv.build-backend]
module-name = "roost"
module-root = "src"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["B008"]  # FastAPI's `= Depends(...)` is the canonical pattern

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "testcontainers.*", "fastapi", "fastapi.*", "django", "django.*", "flask", "flask.*", "watchfiles"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
    "testcontainers[postgres]>=4.14.2",
    "types-croniter>=6.2.2.20260408",
]
